@@ -56,7 +56,7 @@ my %deep = (
     PV  => "string",
     PV8 => "ab\ncd\x{20ac}\t",
     PVM => $!,
-    RV  => \$.,
+    RV  => \$DBD,
     AR  => [ 1..2 ],
     HR  => { key => "value" },
     OBJ => ( bless { auto_diag => 1 }, "Text::CSV_XS" ),
@@ -70,11 +70,13 @@ my %deep = (
 
 ok ($hash{deep} = { %deep },				"Deep structure");
 
-if ($^O eq "MSWin32" && $deep{RV} != $hash{RV}) {
+my %got = %{$hash{deep}};
+
+if ($^O eq "MSWin32" && $deep{RV} != $got{RV}) {
     delete $deep{RV};
-    delete $hash{RV};
+    delete $got{RV};
     }
-is_deeply ($hash{deep}, \%deep,				"Content");
+is_deeply (\%got, \%deep,				"Content");
 
 # clear
 %hash = ();
