@@ -11,7 +11,7 @@ require "t/util.pl";
 my @array;
 my $DBD = "SQLite";
 cleanup ($DBD);
-eval { tie @array, "Tie::Array::DBD", dsn ($DBD) };
+eval { tie @array, "Tie::Array::DBD", dsn ($DBD), { str => "Storable" }};
 
 tied @array or plan_fail ($DBD);
 
@@ -132,6 +132,11 @@ is_deeply ([splice (@array, 2, 2, 3, 2)],	[2,3],	"splice \@array, off, len, ..")
 is_deeply (\@array, [0..1,3,2,4..9],			".. leftover");
 is_deeply ([splice (@array, 4, -2, 25)],	[4..7],	"splice \@array, off, -len");
 is_deeply (\@array, [0,1,3,2,25,8,9],			".. leftover");
+
+ok (@array = ([ 1, 2 ]),				"Set AOA");
+is_deeply (\@array, [[ 1, 2 ]],				"AOA");
+#ok ($array[0][1] = 1,					"Set element");
+#is ($array[0][1], 1,					"Get element");
 
 untie @array;
 cleanup ($DBD);
